Implement search feature (#4)
* Separate api search and list shows

* Add index for shows table

* Implement new home page

* Implement shows page

* Display pagination info

* Add view prefix to the templ files

* Add search bar

* Finish flow search
