# desktop/server/uri/url.go
@@ -4,6 +4,8 @@ import (
 	"fmt"
 	"net/url"
 
+	"github.com/phimtorr/phimtor/desktop/client/api"
+
 	"github.com/phimtorr/phimtor/desktop/torrent"
 )
 
@@ -11,8 +13,19 @@ func Home() string {
 	return "/"
 }
 
-func ListShows() string {
-	return "/shows"
+func ListShows(page, pageSize int, showType api.ShowType) string {
+	return fmt.Sprintf("/shows?page=%d&pageSize=%d&type=%s", page, pageSize, showType)
+}
+
+func SearchShows(query string, page int) string {
+	queryData := url.Values{}
+	queryData.Set("q", query)
+	queryData.Set("page", fmt.Sprintf("%d", page))
+	uri := "/shows/search"
+	if queryData.Encode() != "" {
+		uri += "?" + queryData.Encode()
+	}
+	return uri
 }
 
 func GetMovie(id int64) string {
