# server/ports/http_list_shows.go
@@ -18,3 +18,16 @@ func (h HttpServer) ListShows(w http.ResponseWriter, r *http.Request, params Lis
 		"pagination": pagination,
 	})
 }
+
+func (h HttpServer) SearchShows(w http.ResponseWriter, r *http.Request, params SearchShowsParams) {
+	shows, pagination, err := h.repo.SearchShow(r.Context(), params)
+	if err != nil {
+		handleError(w, r, "Search shows", err, http.StatusInternalServerError)
+		return
+	}
+
+	render.JSON(w, r, map[string]interface{}{
+		"shows":      shows,
+		"pagination": pagination,
+	})
+}
